k8s-mediaserver/jellyseer/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: jellyseerr
    port: 5055
    protocol: TCP
    targetPort: 5055
  selector:
    app: jellyseerr
  sessionAffinity: None
  type: ClusterIP
